added shitposts popup for deleting unheld cards. refactored card components to use context instead of passing taskId down everywhere

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -775,7 +775,8 @@ textarea {
     #missions,
     #calendar,
     #search,
-    #returnPile {
+    #returnPile,
+    #shitposts {
       z-index: 1;
 
       .actionCircle {
@@ -996,6 +997,14 @@ textarea {
           top: 90%;
           left: 45%;
         }
+      }
+    }
+
+    #shitposts {
+      .actionCircle {
+        left: unset;
+        right: 1.5em;
+        bottom: 5em;
       }
     }
 
