aah horrible bug in grid-unpin. also fixed margin on community hub popup

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -807,8 +807,8 @@ textarea {
       }
 
       .popupPanel {
-        width: 90vw;
-        height: 96vh;
+        width: calc(100vw - 17em);
+        height: calc(100vh - 7.5em);
       }
     }
 
