--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -107,6 +107,12 @@ textarea {
           min-width: 30em;
         }
 
+        .unread {
+          position: absolute;
+          top: 0.25em;
+          left: 0.25em;
+        }
+
         & > .hud > .coin > .hodls {
           top: 0.65em;
         }
@@ -249,6 +255,12 @@ textarea {
 
       &.priority {
         min-height: 2.325em;
+
+        .unread {
+          position: absolute;
+          top: 47%;
+          left: -0.9em;
+        }
       }
 
       &.mission {
@@ -301,15 +313,10 @@ textarea {
           pointer-events: none;
 
           &.mini.before {
-            .seen {
+            .unread {
               position: absolute;
-              content: '';
               top: 0.25em;
               left: 0.25em;
-              height: 0.375em;
-              width: 0.375em;
-              border-radius: 50%;
-              background-color: rgba(255, 10, 10, 0.85);
             }
 
             & > .mission,
@@ -1414,6 +1421,15 @@ textarea {
         top: 50%;
         transform: translateY(-50%);
       }
+    }
+
+    // unread dot on cards
+    .unread {
+      content: '';
+      height: 0.375em;
+      width: 0.375em;
+      border-radius: 50%;
+      background-color: rgba(255, 10, 10, 0.85);
     }
   }
 }
