--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -614,100 +614,101 @@ textarea {
           }
         }
       }
+    }
 
-      .gridContainer {
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-        width: min-content;
-        margin-top: 1em;
-        z-index: 1; // So grid resize button show above of main stack drop zone.
+    // grid
+    .gridContainer {
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+      width: min-content;
+      margin-top: 1em;
+      z-index: 1; // So grid resize button show above of main stack drop zone.
 
-        &.padbottom {
-          margin-bottom: 2em;
-        }
+      &.padbottom {
+        margin-bottom: 2em;
+      }
 
-        & > .grid {
-          display: grid;
+      & > .grid {
+        display: grid;
 
-          & > .zone,
-          & > .dropZone.grid {
-            position: relative;
-            background: $square-bg;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border: $square-border;
-            color: $body-color;
+        & > .zone,
+        & > .dropZone.grid {
+          position: relative;
+          background: $square-bg;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border: $square-border;
+          color: $body-color;
 
-            &.empty {
-              cursor: text;
+          &.empty {
+            cursor: text;
 
-              .dzu-dropzone {
-                width: 100%;
-                height: 100%;
+            .dzu-dropzone {
+              width: 100%;
+              height: 100%;
 
-                &:hover .dzu-inputLabel {
-                  visibility: visible;
-                  margin-top: 50%;
-                  transform: translateY(-50%);
-                }
+              &:hover .dzu-inputLabel {
+                visibility: visible;
+                margin-top: 50%;
+                transform: translateY(-50%);
+              }
 
-                .dzu-inputLabel {
-                  visibility: hidden;
-                  font-size: 0.8em;
-                }
+              .dzu-inputLabel {
+                visibility: hidden;
+                font-size: 0.8em;
+              }
 
-                img {
-                  max-width: 100%;
-                  max-height: 100%;
-                }
+              img {
+                max-width: 100%;
+                max-height: 100%;
               }
             }
+          }
 
-            .hud .menu .action {
-              left: unset;
-              transform: unset;
-            }
+          .hud .menu .action {
+            left: unset;
+            transform: unset;
           }
         }
-        .resizer {
-          position: absolute;
-          margin-top: -4.75em;
-          right: 0;
-          transform: translateX(100%);
+      }
+      .resizer {
+        position: absolute;
+        margin-top: -4.75em;
+        right: 0;
+        transform: translateX(100%);
 
-          button {
-            display: block;
-          }
+        button {
+          display: block;
+        }
 
+        .minus,
+        .plus {
+          outline: none;
+          font-family: monospace;
+          margin: 0;
+          position: relative;
+        }
+
+        .columns {
           .minus,
           .plus {
-            outline: none;
-            font-family: monospace;
-            margin: 0;
-            position: relative;
+            right: -0.275em;
+            margin-top: 0.25em;
+            padding-left: 0.25em;
+            padding-right: 0.25em;
           }
+        }
 
-          .columns {
-            .minus,
-            .plus {
-              right: -0.275em;
-              margin-top: 0.25em;
-              padding-left: 0.25em;
-              padding-right: 0.25em;
-            }
-          }
-
-          .rows {
-            .minus,
-            .plus {
-              display: inline;
-              left: -5.5em;
-              margin-top: 0.6em;
-              margin-right: 0.25em;
-              padding: 0 0.75em;
-            }
+        .rows {
+          .minus,
+          .plus {
+            display: inline;
+            left: -5.5em;
+            margin-top: 0.6em;
+            margin-right: 0.25em;
+            padding: 0 0.75em;
           }
         }
       }
@@ -1431,6 +1432,13 @@ textarea {
       border-radius: 50%;
       background-color: rgba(255, 10, 10, 0.85);
     }
+  }
+
+  #dock {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
