dropping cards on dock cards now moves them inside instead of swapping

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1069,6 +1069,8 @@ textarea {
           margin-top: 0;
           margin-bottom: 0;
           box-shadow: -7px -7px 7px 1px rgba(21, 21, 21, 0.5);
+          max-height: 3em;
+          overflow: hidden;
         }
       }
     }
