tooltip question mark size

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1787,6 +1787,7 @@ textarea {
       display: inline-block;
     }
 
+    // the question mark when it's already inside a heading
     h3 .tipMarker {
       font-size: 1.05em;
     }
