--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -451,6 +451,7 @@ textarea {
             font-size: 0.8em;
             right: unset;
             position: absolute;
+            cursor: pointer;
 
             .label {
               position: absolute;
