improved style of promote button

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1803,6 +1803,14 @@ textarea {
         }
       }
     }
+
+    // image of cheem doge with halo for the Promote Above / ascend feature
+    img.ascend {
+      max-height: 1.6em;
+      margin-top: -0.6em;
+      position: relative;
+      top: 0.4em;
+    }
   }
 }
 
