bird only shows members who don't already have card; fixed hodlr list

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1814,6 +1814,11 @@ textarea {
       position: relative;
       top: 0.4em;
     }
+
+    // bulleted list in a menu, used in the bark menu
+    .menu ul li {
+      list-style-type: none;
+    }
   }
 }
 
